load("@npm//eslint:index.bzl", "eslint", "eslint_test")
load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//samples:samples.bzl", "SAMPLES")

exports_files(
    [
        "LICENSE",
        ".eslintrc.json",
        ".babelrc",
        ".babelrc.jsfiddle.json",
        "package.json",
        "jest.config.js",
        "tsconfig.json",
    ],
    visibility = ["//:__subpackages__"],
)

concatjs_devserver(
    name = "serve",
    deps = [],
    static_files = [":index.html", "//samples:outputs"],
    port = 8080,
)

# CMD = '''
# set -e
# context="{\\"packages\\": {\n"
# packages=$$($(location @npm//lerna/bin:lerna) list)
# i=0
# for p in $$packages; do
#   if ((i > 0)); then
#     context="$${context},\\n"
#   fi
#   context="$${context}\\"$$($(location @npm//json/bin:json) -f samples/$$p/data.json title)\\": \\"$$p\\""
#   i=$$((i + 1))
# done

# context="$${context}}}"
# echo -e $${context} > $@
# '''

# Used to generate data.json
#
# genrule(
#     name = "data",
#     outs = ["data.json"],
#     cmd = CMD,
#     local = 1,
#     tools = [
#         "@npm//json/bin:json",
#         "@npm//lerna/bin:lerna",
#     ],
# )

genrule(
    name = "index",
    srcs = [
        ":data.json",
        ":index.njk",
        "//shared:templates",
    ],
    outs = ["index.html"],
    cmd = "$(location //rules:nunjucks-cli) $(location index.njk) $(location data.json) -p . && cat index.html > $@",
    tools = ["//rules:nunjucks-cli"],
)

ESLINT_DATA = [
    # config files
    ":.eslintrc.json",
    "//samples:.eslintrc.json",
    # plugins
    "@npm//eslint-config-prettier",
    "@npm//eslint-plugin-jest",
    "@npm//eslint-plugin-prettier",
    "@npm//@typescript-eslint/parser",
    "@npm//@typescript-eslint/eslint-plugin",
]

eslint_test(
    name = "eslint",
    args = [
        "samples/**/*.ts",
        "samples/**/*.js",
    ],
    data = ESLINT_DATA + [
        "//samples:inputs",
        "//samples:outputs",
    ],
)

eslint(
    name = "eslint-fix",
    args = [
        "samples/**/*.ts",
        "--fix",
    ],
    data = ESLINT_DATA + [
        "//samples:inputs",
    ],
)

pkg_tar(
    name = "public",
    srcs = [
        "//:index.html",
        "//samples:outputs",
    ],
    strip_prefix = ".",
    remap_paths = {
            "samples/{}/github.html".format(name): "samples/{}/index.html".format(name) for name in SAMPLES
        },
)
