load("@npm//jest:index.bzl", "jest_test")
load("//samples:samples.bzl", "SAMPLES")


IGNORE = [
    'local-context-home', #
    'programmatic-load-button', # requires interaction
]

[
    jest_test(
        name = sample,
        size = "large",
        data = [
            "selenium.test.js",
            "//:jest.config.js",
            "//samples/{}:github.html".format(sample),
            "@npm//glob",
            "@npm//selenium-webdriver",
        ],
        flaky = 1,
        tags = ["manual"],
        templated_args = [
            "--no-cache",
            "--no-watchman",
            "--ci",
            "--config",
            "$(rootpath //:jest.config.js)",
            "--runTestsByPath",
            "$(rootpath :selenium.test.js)",
        ],
    )
    for sample in SAMPLES if sample not in IGNORE
]

test_suite(
    name = "e2e",
    tags = ["manual"],
    tests = [
        sample
        for sample in SAMPLES if sample not in IGNORE
    ],
)
