load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

exports_files([
    "diff.js",
    "tags.js",
])

nodejs_binary(
    name = "json",
    entry_point = "@npm//:node_modules/json/lib/json.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "nunjucks-cli",
    data = [
        "@npm//nunjucks",
        "@npm//nunjucks-cli",
    ],
    entry_point = "@npm//:node_modules/nunjucks-cli/main.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "prettier",
    node_modules = "@npm//:node_modules",
    entry_point = "@npm//:node_modules/prettier/bin-prettier.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "eslint",
    entry_point = "@npm//:node_modules/eslint/bin/eslint.js",
    node_modules = "@npm//:node_modules",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "babel",
    data = [
        "@npm//@babel/core",
        "@npm//@babel/preset-env",
    ],
    entry_point = "@npm//:node_modules/@babel/cli/bin/babel.js",
    node_modules = "@npm//:node_modules",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "inline",
    data = [
        "inline.js",
        "@npm//:node_modules",
    ],
    entry_point = ":inline.js",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "remove_apache_license",
    srcs = ["remove_apache_license.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "strip_region_tags_bin",
    srcs = ["strip_region_tags.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "nunjucks",
    srcs = ["nunjucks.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "strip_source_map_url_bin",
    srcs = ["strip_source_map_url.sh"],
    visibility = ["//visibility:public"],
)
