load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//eslint:index.bzl", "eslint")

exports_files([
    "diff.js",
    "tags.js",
    "js_test.js",
])

nodejs_binary(
    name = "json",
    entry_point = "@npm//:node_modules/json/lib/json.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "nunjucks-cli",
    data = [
        "@npm//nunjucks",
        "@npm//nunjucks-cli",
    ],
    entry_point = "@npm//:node_modules/nunjucks-cli/main.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "prettier",
    data = [
        "@npm//prettier",
    ],
    entry_point = "@npm//:node_modules/prettier/bin-prettier.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "html-minifier",
    data = [
        "@npm//html-minifier",
    ],
    entry_point = "@npm//:node_modules/html-minifier/cli.js",
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "eslint",
    data = [
        "@npm//@babel/core",
        "@npm//@babel/eslint-parser",
        "@npm//eslint",
        "@npm//eslint-config-prettier",
        "@npm//eslint-plugin-jest",
        "@npm//eslint-plugin-prettier",
        "@npm//fast-diff",
        "@npm//prettier",
        "@npm//prettier-linter-helpers",
        "@npm//v8-compile-cache",
    ],
    entry_point = "@npm//:node_modules/eslint/bin/eslint.js",
    visibility = ["//visibility:public"],
    templated_args = ["--bazel_patch_module_resolver"],
)

nodejs_binary(
    name = "inline",
    data = [
        "inline.js",
        "@npm//ansi-colors",
        "@npm//dom-serializer",
        "@npm//domelementtype",
        "@npm//domhandler",
        "@npm//domutils",
        "@npm//entities",
        "@npm//escape-goat",
        "@npm//htmlparser2",
        "@npm//mime",
        "@npm//node-fetch",
        "@npm//valid-data-url",
        "@npm//web-resource-inliner",
    ],
    entry_point = ":inline.js",
    templated_args = ["--nobazel_node_patches"],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "package",
    data = [
        "package.js",
        "@npm//sort-package-json",
    ],
    entry_point = ":package.js",
    templated_args = ["--nobazel_node_patches"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "remove_apache_license",
    srcs = ["remove_apache_license.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "strip_region_tags_bin",
    srcs = ["strip_region_tags.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "nunjucks",
    srcs = ["nunjucks.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "strip_source_map_url_bin",
    srcs = ["strip_source_map_url.sh"],
    visibility = ["//visibility:public"],
)
