exports_files(
    [
        ".eslintrc.json",
    ],
    visibility = ["//visibility:public"],
)

# srcs generated with:
# bazel query "kind(fileinputs, //samples/...)" | awk '{ print "\"" $1 "\"," }' | awk '{a[i++]=$0} END {for (j=i-1; j>=0;) print a[j--] }'
filegroup(
    name = "outputs",
    srcs = [
        "//samples/add-map:outputs",
        "//samples/aerial-rotation:outputs",
        "//samples/aerial-simple:outputs",
        "//samples/circle-simple:outputs",
        "//samples/combining-data:outputs",
        "//samples/conserve-map-on-scroll:outputs",
        "//samples/control-bounds-restriction:outputs",
        "//samples/control-custom:outputs",
        "//samples/control-custom-state:outputs",
        "//samples/control-default:outputs",
        "//samples/control-disableUI:outputs",
        "//samples/control-options:outputs",
        "//samples/control-positioning:outputs",
        "//samples/control-positioning-labels:outputs",
        "//samples/control-replacement:outputs",
        "//samples/control-simple:outputs",
        "//samples/controls-basic-map:outputs",
        "//samples/custom-markers:outputs",
        "//samples/delete-vertex-menu:outputs",
        "//samples/directions-complex:outputs",
        "//samples/directions-draggable:outputs",
        "//samples/directions-panel:outputs",
        "//samples/directions-simple:outputs",
        "//samples/directions-travel-modes:outputs",
        "//samples/directions-waypoints:outputs",
        "//samples/disable-zoom-and-pan:outputs",
        "//samples/distance-matrix:outputs",
        "//samples/drawing-tools:outputs",
        "//samples/earthquake_circles:outputs",
        "//samples/earthquake_heatmap:outputs",
        "//samples/earthquake_heatmap_weighted:outputs",
        "//samples/earthquake_markers:outputs",
        "//samples/elevation-paths:outputs",
        "//samples/elevation-simple:outputs",
        "//samples/event-arguments:outputs",
        "//samples/event-closure:outputs",
        "//samples/event-domListener:outputs",
        "//samples/event-poi:outputs",
        "//samples/event-properties:outputs",
        "//samples/event-simple:outputs",
        "//samples/firebase-map:outputs",
        "//samples/geocoding-component-restriction:outputs",
        "//samples/geocoding-place-id:outputs",
        "//samples/geocoding-region:outputs",
        "//samples/geocoding-reverse:outputs",
        "//samples/geocoding-simple:outputs",
        "//samples/geometry-encodings:outputs",
        "//samples/geometry-headings:outputs",
        "//samples/groundoverlay-simple:outputs",
        "//samples/hiding-features:outputs",
        "//samples/icon-complex:outputs",
        "//samples/icon-simple:outputs",
        "//samples/infowindow-simple:outputs",
        "//samples/infowindow-simple-max:outputs",
        "//samples/interaction-cooperative:outputs",
        "//samples/kml-map:outputs",
        "//samples/landing-page-add-map:outputs",
        "//samples/landing-page-marker-clustering:outputs",
        "//samples/landing-page-visualize-data:outputs",
        "//samples/layer-bicycling:outputs",
        "//samples/layer-data-dragndrop:outputs",
        "//samples/layer-data-dynamic:outputs",
        "//samples/layer-data-event:outputs",
        "//samples/layer-data-polygon:outputs",
        "//samples/layer-data-quakes:outputs",
        "//samples/layer-data-quakes-red:outputs",
        "//samples/layer-data-quakes-simple:outputs",
        "//samples/layer-data-simple:outputs",
        "//samples/layer-data-style:outputs",
        "//samples/layer-georss:outputs",
        "//samples/layer-heatmap:outputs",
        "//samples/layer-kml:outputs",
        "//samples/layer-kml-features:outputs",
        "//samples/layer-traffic:outputs",
        "//samples/layer-transit:outputs",
        "//samples/legend:outputs",
        "//samples/map-coordinates:outputs",
        "//samples/map-events:outputs",
        "//samples/map-geolocation:outputs",
        "//samples/map-language:outputs",
        "//samples/map-latlng-literal:outputs",
        "//samples/map-projection-simple:outputs",
        "//samples/map-puzzle:outputs",
        "//samples/map-rtl:outputs",
        "//samples/map-simple:outputs",
        "//samples/map-sync:outputs",
        "//samples/maptype-base:outputs",
        "//samples/maptype-image:outputs",
        "//samples/maptype-image-overlay:outputs",
        "//samples/maptype-overlay:outputs",
        "//samples/maptype-styled-simple:outputs",
        "//samples/marker-animations:outputs",
        "//samples/marker-animations-iteration:outputs",
        "//samples/marker-clustering:outputs",
        "//samples/marker-labels:outputs",
        "//samples/marker-remove:outputs",
        "//samples/marker-simple:outputs",
        "//samples/marker-symbol-custom:outputs",
        "//samples/marker-symbol-predefined:outputs",
        "//samples/maxzoom-simple:outputs",
        "//samples/mysql-to-maps:outputs",
        "//samples/overlay-hideshow:outputs",
        "//samples/overlay-popup:outputs",
        "//samples/overlay-remove:outputs",
        "//samples/overlay-simple:outputs",
        "//samples/overlay-symbol-animate:outputs",
        "//samples/overlay-symbol-arrow:outputs",
        "//samples/overlay-symbol-custom:outputs",
        "//samples/overlay-symbol-dashed:outputs",
        "//samples/place-details:outputs",
        "//samples/place-id:outputs",
        "//samples/place-search:outputs",
        "//samples/place-search-pagination:outputs",
        "//samples/places-autocomplete:outputs",
        "//samples/places-autocomplete-addressform:outputs",
        "//samples/places-autocomplete-directions:outputs",
        "//samples/places-autocomplete-hotelsearch:outputs",
        "//samples/places-autocomplete-multiple-countries:outputs",
        "//samples/places-placeid-finder:outputs",
        "//samples/places-placeid-geocoder:outputs",
        "//samples/places-queryprediction:outputs",
        "//samples/places-searchbox:outputs",
        "//samples/poly-containsLocation:outputs",
        "//samples/polygon-arrays:outputs",
        "//samples/polygon-autoclose:outputs",
        "//samples/polygon-draggable:outputs",
        "//samples/polygon-hole:outputs",
        "//samples/polygon-simple:outputs",
        "//samples/polyline-complex:outputs",
        "//samples/polyline-remove:outputs",
        "//samples/polyline-simple:outputs",
        "//samples/rectangle-event:outputs",
        "//samples/rectangle-simple:outputs",
        "//samples/rectangle-zoom:outputs",
        "//samples/streetview-controls:outputs",
        "//samples/streetview-custom-simple:outputs",
        "//samples/streetview-custom-tiles:outputs",
        "//samples/streetview-embed:outputs",
        "//samples/streetview-events:outputs",
        "//samples/streetview-overlays:outputs",
        "//samples/streetview-service:outputs",
        "//samples/streetview-simple:outputs",
        "//samples/style-array:outputs",
        "//samples/style-selector:outputs",
        "//samples/user-editable-shapes:outputs",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "inputs",
    srcs = [
        "//samples/add-map:inputs",
        "//samples/aerial-rotation:inputs",
        "//samples/aerial-simple:inputs",
        "//samples/circle-simple:inputs",
        "//samples/combining-data:inputs",
        "//samples/conserve-map-on-scroll:inputs",
        "//samples/control-bounds-restriction:inputs",
        "//samples/control-custom:inputs",
        "//samples/control-custom-state:inputs",
        "//samples/control-default:inputs",
        "//samples/control-disableUI:inputs",
        "//samples/control-options:inputs",
        "//samples/control-positioning:inputs",
        "//samples/control-positioning-labels:inputs",
        "//samples/control-replacement:inputs",
        "//samples/control-simple:inputs",
        "//samples/controls-basic-map:inputs",
        "//samples/custom-markers:inputs",
        "//samples/delete-vertex-menu:inputs",
        "//samples/directions-complex:inputs",
        "//samples/directions-draggable:inputs",
        "//samples/directions-panel:inputs",
        "//samples/directions-simple:inputs",
        "//samples/directions-travel-modes:inputs",
        "//samples/directions-waypoints:inputs",
        "//samples/disable-zoom-and-pan:inputs",
        "//samples/distance-matrix:inputs",
        "//samples/drawing-tools:inputs",
        "//samples/earthquake_circles:inputs",
        "//samples/earthquake_heatmap:inputs",
        "//samples/earthquake_heatmap_weighted:inputs",
        "//samples/earthquake_markers:inputs",
        "//samples/elevation-paths:inputs",
        "//samples/elevation-simple:inputs",
        "//samples/event-arguments:inputs",
        "//samples/event-closure:inputs",
        "//samples/event-domListener:inputs",
        "//samples/event-poi:inputs",
        "//samples/event-properties:inputs",
        "//samples/event-simple:inputs",
        "//samples/firebase-map:inputs",
        "//samples/geocoding-component-restriction:inputs",
        "//samples/geocoding-place-id:inputs",
        "//samples/geocoding-region:inputs",
        "//samples/geocoding-reverse:inputs",
        "//samples/geocoding-simple:inputs",
        "//samples/geometry-encodings:inputs",
        "//samples/geometry-headings:inputs",
        "//samples/groundoverlay-simple:inputs",
        "//samples/hiding-features:inputs",
        "//samples/icon-complex:inputs",
        "//samples/icon-simple:inputs",
        "//samples/infowindow-simple:inputs",
        "//samples/infowindow-simple-max:inputs",
        "//samples/interaction-cooperative:inputs",
        "//samples/kml-map:inputs",
        "//samples/landing-page-add-map:inputs",
        "//samples/landing-page-marker-clustering:inputs",
        "//samples/landing-page-visualize-data:inputs",
        "//samples/layer-bicycling:inputs",
        "//samples/layer-data-dragndrop:inputs",
        "//samples/layer-data-dynamic:inputs",
        "//samples/layer-data-event:inputs",
        "//samples/layer-data-polygon:inputs",
        "//samples/layer-data-quakes:inputs",
        "//samples/layer-data-quakes-red:inputs",
        "//samples/layer-data-quakes-simple:inputs",
        "//samples/layer-data-simple:inputs",
        "//samples/layer-data-style:inputs",
        "//samples/layer-georss:inputs",
        "//samples/layer-heatmap:inputs",
        "//samples/layer-kml:inputs",
        "//samples/layer-kml-features:inputs",
        "//samples/layer-traffic:inputs",
        "//samples/layer-transit:inputs",
        "//samples/legend:inputs",
        "//samples/map-coordinates:inputs",
        "//samples/map-events:inputs",
        "//samples/map-geolocation:inputs",
        "//samples/map-language:inputs",
        "//samples/map-latlng-literal:inputs",
        "//samples/map-projection-simple:inputs",
        "//samples/map-puzzle:inputs",
        "//samples/map-rtl:inputs",
        "//samples/map-simple:inputs",
        "//samples/map-sync:inputs",
        "//samples/maptype-base:inputs",
        "//samples/maptype-image:inputs",
        "//samples/maptype-image-overlay:inputs",
        "//samples/maptype-overlay:inputs",
        "//samples/maptype-styled-simple:inputs",
        "//samples/marker-animations:inputs",
        "//samples/marker-animations-iteration:inputs",
        "//samples/marker-clustering:inputs",
        "//samples/marker-labels:inputs",
        "//samples/marker-remove:inputs",
        "//samples/marker-simple:inputs",
        "//samples/marker-symbol-custom:inputs",
        "//samples/marker-symbol-predefined:inputs",
        "//samples/maxzoom-simple:inputs",
        "//samples/mysql-to-maps:inputs",
        "//samples/overlay-hideshow:inputs",
        "//samples/overlay-popup:inputs",
        "//samples/overlay-remove:inputs",
        "//samples/overlay-simple:inputs",
        "//samples/overlay-symbol-animate:inputs",
        "//samples/overlay-symbol-arrow:inputs",
        "//samples/overlay-symbol-custom:inputs",
        "//samples/overlay-symbol-dashed:inputs",
        "//samples/place-details:inputs",
        "//samples/place-id:inputs",
        "//samples/place-search:inputs",
        "//samples/place-search-pagination:inputs",
        "//samples/places-autocomplete:inputs",
        "//samples/places-autocomplete-addressform:inputs",
        "//samples/places-autocomplete-directions:inputs",
        "//samples/places-autocomplete-hotelsearch:inputs",
        "//samples/places-autocomplete-multiple-countries:inputs",
        "//samples/places-placeid-finder:inputs",
        "//samples/places-placeid-geocoder:inputs",
        "//samples/places-queryprediction:inputs",
        "//samples/places-searchbox:inputs",
        "//samples/poly-containsLocation:inputs",
        "//samples/polygon-arrays:inputs",
        "//samples/polygon-autoclose:inputs",
        "//samples/polygon-draggable:inputs",
        "//samples/polygon-hole:inputs",
        "//samples/polygon-simple:inputs",
        "//samples/polyline-complex:inputs",
        "//samples/polyline-remove:inputs",
        "//samples/polyline-simple:inputs",
        "//samples/rectangle-event:inputs",
        "//samples/rectangle-simple:inputs",
        "//samples/rectangle-zoom:inputs",
        "//samples/streetview-controls:inputs",
        "//samples/streetview-custom-simple:inputs",
        "//samples/streetview-custom-tiles:inputs",
        "//samples/streetview-embed:inputs",
        "//samples/streetview-events:inputs",
        "//samples/streetview-overlays:inputs",
        "//samples/streetview-service:inputs",
        "//samples/streetview-simple:inputs",
        "//samples/style-array:inputs",
        "//samples/style-selector:inputs",
        "//samples/user-editable-shapes:inputs",
    ],
    visibility = ["//visibility:public"],
)
