load("//samples:samples.bzl", "SAMPLES")

exports_files(
    [
        ".eslintrc.json",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "outputs",
    srcs = ["//samples/{}:outputs".format(sample) for sample in SAMPLES],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "inputs",
    srcs = [
        "//samples/add-map:inputs",
        "//samples/aerial-rotation:inputs",
        "//samples/aerial-simple:inputs",
        "//samples/circle-simple:inputs",
        "//samples/combining-data:inputs",
        "//samples/conserve-map-on-scroll:inputs",
        "//samples/control-bounds-restriction:inputs",
        "//samples/control-custom:inputs",
        "//samples/control-custom-state:inputs",
        "//samples/control-default:inputs",
        "//samples/control-disableUI:inputs",
        "//samples/control-options:inputs",
        "//samples/control-positioning:inputs",
        "//samples/control-positioning-labels:inputs",
        "//samples/control-replacement:inputs",
        "//samples/control-simple:inputs",
        "//samples/controls-basic-map:inputs",
        "//samples/custom-markers:inputs",
        "//samples/delete-vertex-menu:inputs",
        "//samples/directions-complex:inputs",
        "//samples/directions-draggable:inputs",
        "//samples/directions-panel:inputs",
        "//samples/directions-simple:inputs",
        "//samples/directions-travel-modes:inputs",
        "//samples/directions-waypoints:inputs",
        "//samples/disable-zoom-and-pan:inputs",
        "//samples/distance-matrix:inputs",
        "//samples/drawing-tools:inputs",
        "//samples/earthquake_circles:inputs",
        "//samples/earthquake_heatmap:inputs",
        "//samples/earthquake_heatmap_weighted:inputs",
        "//samples/earthquake_markers:inputs",
        "//samples/elevation-paths:inputs",
        "//samples/elevation-simple:inputs",
        "//samples/event-arguments:inputs",
        "//samples/event-closure:inputs",
        "//samples/event-domListener:inputs",
        "//samples/event-poi:inputs",
        "//samples/event-properties:inputs",
        "//samples/event-simple:inputs",
        "//samples/firebase-map:inputs",
        "//samples/geocoding-component-restriction:inputs",
        "//samples/geocoding-place-id:inputs",
        "//samples/geocoding-region:inputs",
        "//samples/geocoding-reverse:inputs",
        "//samples/geocoding-simple:inputs",
        "//samples/geometry-encodings:inputs",
        "//samples/geometry-headings:inputs",
        "//samples/groundoverlay-simple:inputs",
        "//samples/hiding-features:inputs",
        "//samples/icon-complex:inputs",
        "//samples/icon-simple:inputs",
        "//samples/infowindow-simple:inputs",
        "//samples/infowindow-simple-max:inputs",
        "//samples/interaction-cooperative:inputs",
        "//samples/kml-map:inputs",
        "//samples/landing-page-add-map:inputs",
        "//samples/landing-page-marker-clustering:inputs",
        "//samples/landing-page-visualize-data:inputs",
        "//samples/layer-bicycling:inputs",
        "//samples/layer-data-dragndrop:inputs",
        "//samples/layer-data-dynamic:inputs",
        "//samples/layer-data-event:inputs",
        "//samples/layer-data-polygon:inputs",
        "//samples/layer-data-quakes:inputs",
        "//samples/layer-data-quakes-red:inputs",
        "//samples/layer-data-quakes-simple:inputs",
        "//samples/layer-data-simple:inputs",
        "//samples/layer-data-style:inputs",
        "//samples/layer-georss:inputs",
        "//samples/layer-heatmap:inputs",
        "//samples/layer-kml:inputs",
        "//samples/layer-kml-features:inputs",
        "//samples/layer-traffic:inputs",
        "//samples/layer-transit:inputs",
        "//samples/legend:inputs",
        "//samples/map-coordinates:inputs",
        "//samples/map-events:inputs",
        "//samples/map-geolocation:inputs",
        "//samples/map-language:inputs",
        "//samples/map-latlng-literal:inputs",
        "//samples/map-projection-simple:inputs",
        "//samples/map-puzzle:inputs",
        "//samples/map-rtl:inputs",
        "//samples/map-simple:inputs",
        "//samples/map-sync:inputs",
        "//samples/maptype-base:inputs",
        "//samples/maptype-image:inputs",
        "//samples/maptype-image-overlay:inputs",
        "//samples/maptype-overlay:inputs",
        "//samples/maptype-styled-simple:inputs",
        "//samples/marker-animations:inputs",
        "//samples/marker-animations-iteration:inputs",
        "//samples/marker-clustering:inputs",
        "//samples/marker-labels:inputs",
        "//samples/marker-remove:inputs",
        "//samples/marker-simple:inputs",
        "//samples/marker-symbol-custom:inputs",
        "//samples/marker-symbol-predefined:inputs",
        "//samples/maxzoom-simple:inputs",
        "//samples/mysql-to-maps:inputs",
        "//samples/overlay-hideshow:inputs",
        "//samples/overlay-popup:inputs",
        "//samples/overlay-remove:inputs",
        "//samples/overlay-simple:inputs",
        "//samples/overlay-symbol-animate:inputs",
        "//samples/overlay-symbol-arrow:inputs",
        "//samples/overlay-symbol-custom:inputs",
        "//samples/overlay-symbol-dashed:inputs",
        "//samples/place-details:inputs",
        "//samples/place-id:inputs",
        "//samples/place-search:inputs",
        "//samples/place-search-pagination:inputs",
        "//samples/places-autocomplete:inputs",
        "//samples/places-autocomplete-addressform:inputs",
        "//samples/places-autocomplete-directions:inputs",
        "//samples/places-autocomplete-hotelsearch:inputs",
        "//samples/places-autocomplete-multiple-countries:inputs",
        "//samples/places-placeid-finder:inputs",
        "//samples/places-placeid-geocoder:inputs",
        "//samples/places-queryprediction:inputs",
        "//samples/places-searchbox:inputs",
        "//samples/poly-containsLocation:inputs",
        "//samples/polygon-arrays:inputs",
        "//samples/polygon-autoclose:inputs",
        "//samples/polygon-draggable:inputs",
        "//samples/polygon-hole:inputs",
        "//samples/polygon-simple:inputs",
        "//samples/polyline-complex:inputs",
        "//samples/polyline-remove:inputs",
        "//samples/polyline-simple:inputs",
        "//samples/rectangle-event:inputs",
        "//samples/rectangle-simple:inputs",
        "//samples/rectangle-zoom:inputs",
        "//samples/streetview-controls:inputs",
        "//samples/streetview-custom-simple:inputs",
        "//samples/streetview-custom-tiles:inputs",
        "//samples/streetview-embed:inputs",
        "//samples/streetview-events:inputs",
        "//samples/streetview-overlays:inputs",
        "//samples/streetview-service:inputs",
        "//samples/streetview-simple:inputs",
        "//samples/style-array:inputs",
        "//samples/style-selector:inputs",
        "//samples/user-editable-shapes:inputs",
    ],
    visibility = ["//visibility:public"],
)
