load("//samples:samples.bzl", "SAMPLES")

exports_files(
    [
        ".eslintrc.json",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "outputs",
    srcs = ["//samples/{}:outputs".format(sample) for sample in SAMPLES],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "inputs",
    srcs = ["//samples/{}:inputs".format(sample) for sample in SAMPLES],
    visibility = ["//visibility:public"],
)
