package(default_visibility = ["//visibility:public"])

filegroup(
    name = "templates",
    srcs = glob(["*.njk"]),
)

filegroup(
    name = "package",
    srcs = glob(
        [
            "package/*",
        ],
        exclude = [
            "package/node_modules/",
            "package/src/index.ts",
            "package/static/index.html",
        ],
    ),
)
