package(default_visibility = ["//visibility:public"])

exports_files([
    "env.tpl",
    "cloud_shell_instructions.tpl.md",
    "README.md",
    "sandbox.config.json",
    ".gitpod.yml",
    ".gitignore",
] + glob(["webpack.*.js"]))

filegroup(
    name = "templates",
    srcs = glob(["*.njk"]),
)
