package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library")

sass_library(
    name = "autocomplete-directions",
    srcs = ["_autocomplete-directions.scss"],
)

sass_library(
    name = "autocomplete",
    srcs = ["_autocomplete.scss"],
)

sass_library(
    name = "custom-control-state",
    srcs = ["_custom-control-state.scss"],
)

sass_library(
    name = "default",
    srcs = ["_default.scss"],
)

sass_library(
    name = "floating-panel",
    srcs = ["_floating-panel.scss"],
)

sass_library(
    name = "right-panel",
    srcs = ["_right-panel.scss"],
)

sass_library(
    name = "material-design-theme",
    srcs = [
        "_material-design-select.scss",
        "_material-design-theme.scss",
    ],
)

sass_library(
    name = "sidebar",
    srcs = ["_sidebar.scss"],
)
